--- a/complete/src/main/resources/application.yml
+++ b/complete/src/main/resources/application.yml
@@ -5,6 +5,21 @@ server:
 spring:
   application:
     name: testLatticeApp
+  cloud:
+    azure:
+      compatibility-verifier:
+        enabled: false
+      keyvault:
+        secret:
+          property-sources[0]:
+            name: key-vault-property-source-1
+            endpoint: https://superkeyvault123u.vault.azure.net/
+          property-source-enabled: true
+
+keyvault:
+  secret:
+    secretOne: ${DATABASE}
+    secretTwo: ${NEWSECRET}
 
 ribbon:
   ServerListRefreshInterval: 1000
@@ -16,3 +31,4 @@ endpoints:
     enabled: true
   shutdown:
     enabled: true
+
